--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Number of generations: </p>
         <p id="generations">0</p>
     </div>
-    <div>
+    <div class="buttons">
         <button id="stop" function>Stop</button>
         <button id="start" function>Start</button>
         <button id="iterate" function>Iterate</button>
@@ -23,7 +23,7 @@
         <button id="rando" function>Random</button>
     </div>
     <div>
-        <canvas width = 1800 height = 600></canvas>
+        <canvas width = 1000 height = 600></canvas>
     </div>
     <footer>
         <div>
